# i16_msmapper

./: README.md  main.py  mamapper_bean_desc.txt  pyproject.toml
examples/: matplotlib_remap_plots.py  matplotlib_voxel_plot.py  msmapper_read_plot.html  msmapper_read_plot.ipynb  run_msmapper_windows.py
examples/data/: 1041304.nxs
i16_msmapper/: __init__.py  __main__.py  mapper_plotter.py  mapper_runner.py  tkcolormap_editor.py  tkmsmapper.py  tkwidgets.py
i16_msmapper/templates/: msmapper_script_template.txt  plotter_script_template.txt
