[build-system]
requires = ["setuptools >= 61.0", "wheel", "numpy", "matplotlib", "hdfmap"]
build-backend = "setuptools.build_meta"

[project]
name = "i16_msmapper"
version = "1.3"
dependencies = [
  "numpy",
  "matplotlib",
  "hdfmap"
]
requires-python = ">=3.10"
authors = [
  {name = "Dan Porter", email = "dan.porter@diamond.ac.uk"},
]
maintainers = [
  {name = "Dan Porter", email = "dan.porter@diamond.ac.uk"},
]
description = "Simple GUI to run the msmapper code on Beamline I16"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  'nexus',
]
classifiers = [
  'Programming Language :: Python :: 3.10',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering :: Physics',
  'License :: OSI Approved :: Apache Software License',
  'Development Status :: 3 - Alpha',
]

[project.urls]
Homepage = "https://github.com/DiamondLightSource/i16_msmapper"
Documentation = "https://github.com/DiamondLightSource/i16_msmapper"
Repository = "https://github.com/DiamondLightSource/i16_msmapper"
"Bug Tracker" = "https://github.com/DiamondLightSource/i16_msmapper"


[tool.pytest.ini_options]
pythonpath = [
  "src",
]
